🐛 Fixed Canvas z-index to -1

--- a/css/main.css
+++ b/css/main.css
@@ -578,7 +578,7 @@ Body Styling
 
 canvas {
     display: block;
-    z-index: 0;
+    z-index: -1;
     position: fixed;
     top: 0;
 }
